--- a/SchoolEnrollment/src/main/resources/application.properties
+++ b/SchoolEnrollment/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/enrollment
 spring.datasource.username=root
-spring.datasource.password=bbs474155778
+spring.datasource.password=*********
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
